added category management and refactoring